# humanoid_gazebo

./: README.md
ajit_2/: CMakeLists.txt  package.xml
ajit_2/config/: group_joint.yaml  joint_names_ajit_2.yaml
ajit_2/launch/: ajit.launch  ajit_2_old.launch  display.launch  gazebo.launch  testing.launch
ajit_2/meshes/: front_left_wheel.STL  front_right_wheel.STL  head.STL  left_hand.STL  left_lower_arm.STL  left_shoulder.STL  left_shoulder_joint.STL  left_upper_arm.STL  neck.STL  rear_left_wheel.STL  rear_right_wheel.STL  right_hand.STL  right_lower_arm.STL  right_shoulder.STL  right_shoulder_joint.STL  right_upper_arm.STL
ajit_2/scripts/: mapping_all_joint_controller.py  mapping_robot_controller.py
ajit_2/src/: driver.cpp
ajit_2/urdf/: ajit_2.csv  ajit_2.urdf
joy_controller/: CMakeLists.txt  package.xml
joy_controller/script/: joint_controller.py
